# Anime-Recommender-system

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  recommender-k8s.yaml  requirements.txt  setup.py
Data/: processed.csv
configs/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  recommender.py  vector_store.py
